add entity list endpoint
